# slackbot-shipit

./: .gitignore  README.md  README.rst  bot.py  pyproject.toml  requirements.txt  secrets.json.template
slackbot_release/: bot.py  db.py  shipit.py  taskcluster.py  tc.py  utils.py
tests/: test_slackbot_release.py
