[tool.poetry]
name = "slackbot-release"
version = "0.2.0"
description = ""
authors = ["Jordan Lund <jlund@mozilla.com>"]

[tool.poetry.dependencies]
python = "^3.7"
taskcluster = "^16.2"
SQLAlchemy = "^1.3"
slackclient = "=2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
